raft: implement join
